[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/FireflyParticle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Spectre.gd" type="Script" id=2]
[ext_resource path="res://Sprites/SpectreAnimation.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=5]
radius = 20.0
height = 24.0

[sub_resource type="CircleShape2D" id=2]
radius = 3584.22

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[sub_resource type="CircleShape2D" id=4]
radius = 637.078

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "move"
length = 0.5
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "move"

[sub_resource type="AnimationNodeStateMachine" id=9]
states/move/node = SubResource( 8 )
states/move/position = Vector2( 356, 83 )
start_node = "move"

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[node name="Spectre" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Enemy" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 2

[node name="FireflyParticle" parent="." instance=ExtResource( 1 )]
modulate = Color( 2, 0.32, 0.15, 1 )
position = Vector2( -5, -6 )
scale = Vector2( 0.5, 1 )

[node name="spectrebody" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )
disabled = true

[node name="playerdetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerdetection"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="playerTouch" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerTouch"]
shape = SubResource( 3 )

[node name="stunTimer" type="Timer" parent="."]

[node name="ParanoiaAOE" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParanoiaAOE"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/move = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 10 )

[connection signal="body_entered" from="playerdetection" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="playerdetection" to="." method="_on_playerdetection_body_entered"]
[connection signal="body_exited" from="playerdetection" to="." method="_on_playerdetection_body_exited"]
[connection signal="area_entered" from="playerTouch" to="." method="_on_playerTouch_area_entered"]
[connection signal="area_exited" from="playerTouch" to="." method="_on_playerTouch_area_exited"]
[connection signal="body_entered" from="playerTouch" to="." method="_on_playerTouch_body_entered"]
[connection signal="timeout" from="stunTimer" to="." method="_on_stunTimer_timeout"]
[connection signal="body_entered" from="ParanoiaAOE" to="." method="_on_ParanoiaAOE_body_entered"]
[connection signal="body_exited" from="ParanoiaAOE" to="." method="_on_ParanoiaAOE_body_exited"]
